--- a/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -91,6 +91,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="darkModeButton" destination="Py3-6J-YPL" id="AxB-Ud-Sx6"/>
                         <outlet property="noEntriesLabel" destination="UA6-6d-mR4" id="dKf-31-X58"/>
                     </connections>
                 </tableViewController>
