--- a/JournalCoreData/JournalCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalCoreData/JournalCoreData/Resources/Base.lproj/Main.storyboard
@@ -57,9 +57,9 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="dateLabel" destination="CUX-Ph-8kF" id="sZ2-AP-UNL"/>
-                                    <outlet property="detailLabel" destination="H76-yZ-ik5" id="RIb-YS-fWZ"/>
-                                    <outlet property="titleLabel" destination="X2C-tz-ye1" id="YPn-XI-S82"/>
+                                    <outlet property="dateLabel" destination="CUX-Ph-8kF" id="Nq4-bk-8dj"/>
+                                    <outlet property="detailLabel" destination="H76-yZ-ik5" id="pRQ-n4-1id"/>
+                                    <outlet property="titleLabel" destination="X2C-tz-ye1" id="sbL-SU-CdB"/>
                                     <segue destination="v36-ze-rXc" kind="show" identifier="ShowDetailSegue" id="LCC-2F-UV4"/>
                                 </connections>
                             </tableViewCell>
@@ -76,11 +76,6 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
-                    <connections>
-                        <outlet property="detailDate" destination="H76-yZ-ik5" id="syJ-pi-OAt"/>
-                        <outlet property="detailLabel" destination="H76-yZ-ik5" id="qnH-V9-feB"/>
-                        <outlet property="titleLabel" destination="X2C-tz-ye1" id="d05-C7-W5h"/>
-                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2UW-Gu-ecE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -127,8 +122,8 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="EntryTitle" destination="vnB-qb-Zlh" id="vVg-t2-D80"/>
                         <outlet property="entryText" destination="MRF-5h-u5B" id="DgR-4I-9wV"/>
+                        <outlet property="entryTitle" destination="vnB-qb-Zlh" id="vVg-t2-D80"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v1T-Tc-z1e" userLabel="First Responder" sceneMemberID="firstResponder"/>
