--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                             </subviews>
                                         </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fjx-WD-RxY">
-                                            <rect key="frame" x="317.5" y="1.5" width="76.5" height="18"/>
+                                            <rect key="frame" x="317.5" y="13" width="76.5" height="18"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -55,7 +55,7 @@
                                         <constraint firstItem="fjx-WD-RxY" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="U58-DT-Nc9" secondAttribute="trailing" constant="8" id="7G7-pm-jPb"/>
                                         <constraint firstItem="U58-DT-Nc9" firstAttribute="leading" secondItem="eHG-KJ-ynA" secondAttribute="leading" constant="20" id="DDu-GX-6DL"/>
                                         <constraint firstItem="U58-DT-Nc9" firstAttribute="centerY" secondItem="eHG-KJ-ynA" secondAttribute="centerY" id="Hqw-Qz-p2b"/>
-                                        <constraint firstItem="fjx-WD-RxY" firstAttribute="top" secondItem="U58-DT-Nc9" secondAttribute="top" id="Nda-nV-D6Q"/>
+                                        <constraint firstItem="fjx-WD-RxY" firstAttribute="centerY" secondItem="eHG-KJ-ynA" secondAttribute="centerY" id="cS2-ti-nla"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
